# mlex_dlsia_segmentation_prototype

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  example_parameters.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_cxy.txt
.github/workflows/: format-lint.yml  test-lint.yml
_tests/: conftest.py  example_bad_params.yaml  example_msdnet.yaml  example_smsnet_ensemble.yaml  example_tunet.yaml  example_tunet3plus.yaml  test_1-tiled_dataset.py  test_2-utils.py  test_3-train.py  test_4-inference.py
description/: dlsia_v0.0.1.json
example_yamls/: example_msdnet_customdil.yaml  example_msdnet_maxdil.yaml  example_smsnet_ensemble.yaml  example_tunet.yaml  example_tunet3plus.yaml
mlex_dlsia/: dataset.py  inference.py  main.py  network.py  parameters.py  segment.py  train.py  utils.py
mlex_dlsia/utils/: dataloaders.py  params_validation.py  tiled.py
notebooks/: dataloader.ipynb  pipeline.ipynb  smsnet_ensemble.ipynb
src/: encryption.py  main.py  network.py  parameters.py  save_loss.py  seg_utils.py  segment.py  tiled_dataset.py  train.py  train_model.py  train_segmentation.py  utils.py
src/_tests/: conftest.py  example_bad_params.yaml  example_msdnet.yaml  example_smsnet_ensemble.yaml  example_tunet.yaml  example_tunet3plus.yaml  test_1-tiled_dataset.py  test_2-utils.py  test_3-train.py  test_4-inference.py  test_inference.py  test_tiled_dataset.py  test_train.py  test_training.py  test_utils.py
